<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_camera"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/trip_details_label"
        style="?android:listSeparatorTextViewStyle"/>

    <EditText
        android:id="@+id/trip_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/trip_duration_hint"/>

    <EditText
        android:id="@+id/trip_destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/trip_dest_hint"/>

    <EditText
        android:id="@+id/trip_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/trip_comment_hint"/>


    <EditText android:id="@+id/trip_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/trip_date_hint"
        android:layout_weight="0" />

    <Button android:id="@+id/trip_location"
        android:text="@string/trip_location_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="0"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/trip_delete"
            android:text="@string/trip_delete_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/trip_save"
            android:text="@string/trip_save_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>