<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_opt"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opt_title_label"
        android:textSize="18sp"
        style="?android:listSeparatorTextViewStyle"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:id="@+id/opt_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:text="@string/opt_name_label"
            android:layout_weight="0"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/opt_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:hint="@string/opt_name_hint"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:id="@+id/opt_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:text="@string/opt_id_label"
            android:layout_weight="0"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/opt_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:hint="@string/opt_id_hint"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:id="@+id/opt_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:text="@string/opt_email_label"
            android:layout_weight="0"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/opt_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:hint="@string/opt_email_hint"
            android:inputType="textEmailAddress"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:id="@+id/opt_gender_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:text="@string/opt_gender_label"
            android:layout_weight="0"
            android:textSize="16sp"/>

        <Spinner
            android:id="@+id/opt_gender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <TextView
            android:id="@+id/opt_comment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            android:text="@string/opt_comment_label"
            android:layout_weight="0"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/opt_comment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:hint="@string/opt_comment_hint"/>
    </LinearLayout>

    <Button android:id="@+id/opt_fin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_weight="0"
        android:text="@string/opt_fin_text"/>
</LinearLayout>